강의 6.23까지 작업

--- a/css/components/badge.css
+++ b/css/components/badge.css
@@ -9,3 +9,11 @@
   color: white;
   font-weight: 600;
 }
+
+.badge__dot {
+  background-color: tomato;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  position: absolute;
+}
