--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -15,3 +15,12 @@
 .screen-header__icons span {
   margin-left: 25px;
 }
+
+.screen-header__gear {
+  position: relative;
+}
+
+.screen-header__update {
+  left: 19px;
+  bottom: 9px;
+}
