--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,22 +1,3 @@
-.find-icons {
-  display: flex;
-  justify-content: space-between;
-}
-
-.find-icons__icons {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.find-icons__icons i {
-  font-size: 35px;
-}
-
-.find-icons__icons span {
-  margin-top: 18px;
-}
-
 .recommended-friends {
   margin: 25px 0px;
   padding: 25px 0px;
@@ -50,6 +31,8 @@
 
 .open-post {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .open-post__title {
@@ -89,4 +72,53 @@
 
 .open-post__member-status {
   color: #ffb0e0;
+}
+
+.open-post__photo {
+  position: relative;
+}
+
+.open-post__photo img {
+  width: 120px;
+  height: 120px;
+  border-radius: 10px;
+}
+
+.open-post__heart-count {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 5px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 12px;
+}
+
+.open-post__heart-count span {
+  margin-left: 3px;
+}
+
+@keyframes heartBeat {
+  0% {
+    transform: none;
+    color: white;
+  }
+
+  50% {
+    transform: scale(1.3);
+    color: tomato;
+  }
+
+  100% {
+    transform: none;
+    color: white;
+  }
+}
+
+.open-post__heart-count:hover i {
+  will-change: transform;
+  animation: heartBeat 2s linear infinite;
 }
