--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -11,6 +11,11 @@
   font-size: 32px;
 }
 
+#no-mobile span {
+  font-size: 30px;
+  color: white;
+}
+
 @media screen and (max-width: 645px) {
   #no-mobile {
     display: none;
