--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -33,7 +33,7 @@
 }
 
 .main-chat {
-  margin-top: 180px;
+  margin-top: 110px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -79,6 +79,8 @@
   border-radius: 15px;
   border-top-left-radius: 0px;
   margin-right: 5px;
+  width: 45%;
+  line-height: 25px;
 }
 
 .message__time,
@@ -97,6 +99,8 @@
   border-top-left-radius: 15px;
   margin-right: 0px;
   margin-left: 5px;
+  color: white;
+  font-weight: 100;
 }
 
 .message-row--own .message__info {
@@ -166,6 +170,10 @@
   outline: none;
 }
 
+.reply .fa-arrow-up {
+  color: white;
+}
+
 .reply .reply__column:first-child,
 .reply .fa-face-smile-wink,
 .reply button {
@@ -179,7 +187,7 @@
 }
 
 .reply:focus-within input {
-  width: 97vw;
+  width: 95vw;
   transform: translateX(-12%) translateY(-80px);
 }
 
