--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -53,5 +53,6 @@
   align-items: center;
   font-size: 132px;
   animation: hideSplashScreen 0.4s ease-in-out forwards;
-  animation-delay: 2s;
+  animation-delay: 0.5s;
+  color: white;
 }
