--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -15,6 +15,7 @@
 .welcome-header__text {
   width: 60%;
   opacity: 0.7;
+  line-height: 30px;
 }
 
 #login-form {
@@ -48,6 +49,7 @@
   cursor: pointer;
   padding: 20px 0px;
   border-radius: 5px;
+  color: white;
 }
 
 #login-form a {
